# Libratio

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Blog.MD  DETAILED_PROJECT_CONTEXT.md  HACKATHON_RESEARCH.md  KERNEL.md  README.md  Untitled-2026-04-02-2056.excalidraw  benchmark.py  benchmark_results.json  colab_qlora_grpo_fleet.py  fleet_inference.py  generate_chart.py  generate_synthetic_data.py  generate_training_graphs.py  inference.py  kernel_benchmark.py  kernel_interface.py  mongodb_metrics.py  mongodb_streams.py  mongodb_vector.py  openenv.yaml  plot_run2.py  predictive_agent.py  pyproject.toml  requirements.txt  setup_vector_index.py  synthetic_trajectories.json  test_fleet.py  tmp_oversight.json  tmp_precision.json  tmp_recovery.json  tmp_resource.json  train_fleet.py  training_logging.py  training_results.json  upload_to_mongodb.py
.github/workflows/: sync_to_hf_space.yml
MixedPrecisionEnv/: .gitignore  README.md  inference.py
MixedPrecisionEnv/app/: main.py  models.py
agent/: __init__.py  adk_agent.py
app/: main.py
environment/: fleet_env.py  mixed_precision_env.py  physics_model.py  thermal_kernel.py
frontend/: index.html  kernel.js  main.js  styles.css
notebooks/: final_colab_training.ipynb  libratio_colab.ipynb  libratio_fleet_colab.ipynb  qlora_grpo_training.py  train_fleet_colab.ipynb
results/: training_results.json
scenarios/: fleet_scenarios.py  loader.py  task2_scenarios.py  task4_scenarios.py
scripts/: generate_final_graphs.py  manual_play.py
server/: __init__.py  app.py  models.py
(+5 files in other folders)
